# hyperbolic-ner

./: .gitignore  HANDOVER.md  README.md  RESULTS_LOG.md  pyproject.toml  smoke_test.py  train_probe.py  train_zeroshot.py
archive/phase1_symmetric_bienc/: README.md  train_zeroshot.py
docs/: HANDOVER_phase1.md  RESULTS_LOG.md  SYNTHESIS.md
results/: INDEX.md  p3b_launch.out
results/c1/: finerweb.json  ufet.json
results/c2/: euc-d64-s1.json  euc-d64-s2.json  euc-d64-s3.json  hyp-d64-s1.json  hyp-d64-s2.json  hyp-d64-s3.json
results/c3/: euc-infonce-masked-s1.json  euc-infonce-masked-s2.json  euc-infonce-masked-s3.json  euc-infonce-s1.json  euc-infonce-s2.json  euc-infonce-s3.json  euc-soft-bce-s1.json  euc-soft-bce-s2.json  euc-soft-bce-s3.json  hyp-infonce-masked-s1.json  hyp-infonce-masked-s2.json  hyp-infonce-masked-s3.json  hyp-infonce-s1.json  hyp-infonce-s2.json  hyp-infonce-s3.json  hyp-soft-bce-s1.json  hyp-soft-bce-s2.json  hyp-soft-bce-s3.json
results/c3b/: euc-n100-s1.json  euc-n100-s2.json  euc-n100-s3.json  euc-n1000-s1.json  euc-n300-s1.json  euc-n300-s2.json  euc-n300-s3.json  hyp-n100-s1.json  hyp-n100-s2.json  hyp-n100-s3.json  hyp-n300-s1.json  (+3 more)
scripts/: .nfs00000000a576f77900036210  build_taxonomy_wordnet.py  c1_conflict_audit.py  c2_gradient_conflict.py  c2_launch.sh  c3_launch.sh  c3b_scaling_infonce.sh  e0_build_vocab_taxonomy.py  p1_launch_grid.sh  p1_launch_seeds.sh  p1_rerun_ancestor.sh  p2_launch.sh  p3_launch.sh  p3b_launch.sh  p3b_prep_finerweb.py  p3c_launch.sh  p3c_retry.sh  p3d_launch.sh  p3d_prep_finerweb_val.py  paper_figures.py
(+173 files in other folders)
